--- a/.github/workflows/terraformplan.yml
+++ b/.github/workflows/terraformplan.yml
@@ -15,6 +15,10 @@ on:
 env:
  # verbosity setting for Terraform logs
  TF_LOG: INFO
+ TF_VAR_confluent_cloud_api_key: ${{ secrets.CCLOUD_API_KEY }}
+ TF_VAR_confluent_cloud_api_secret: ${{ secrets.CCLOUD_API_SECRET }}
+ TF_VAR_environment: env-zmz2zd
+ TF_VAR_cluster: lkc-v7omw0
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   terraform:
