--- a/.github/workflows/terraformplan.yml
+++ b/.github/workflows/terraformplan.yml
@@ -44,8 +44,7 @@ jobs:
        # if: github.event_name == 'pull_request'
        run: |
          terraform plan -var-file="topics.tfvars" --out planfile -input=false
-         plan=$(terraform show -var-file="topic.tfvars" -json planfile)
-         echo "PLAN=$plan" >> "$GITHUB_ENV" 
+         terraform show -var-file="topic.tfvars" -json planfile > plan.json  
        continue-on-error: false
      - name: Terraform Plan Status
        if: steps.plan.outcome == 'failure'
@@ -56,7 +55,7 @@ jobs:
         version: latest  
      - name: Run OPA 
        run: |
-         result=$( opa exec --decision terraform/topics/deny  --bundle policy/ $PLAN )
+         result=$( opa exec --decision terraform/topics/deny  --bundle policy/ plan.json )
          echo "OPA_RESULT=$result" >> "$GITHUB_ENV" 
        # if: github.event_name == 'pull_request'
      - name: Check OPA 
