--- a/.github/workflows/terraformplan.yml
+++ b/.github/workflows/terraformplan.yml
@@ -4,11 +4,14 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    # Trigger the worflow on push event for all branches
+    branches:
+      - '**'  
   pull_request:
-    branches: [ "main" ]
+    # Trigger the worflow on pull request event for main branch
+    branches:
+      - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -40,8 +43,7 @@ jobs:
        id: init
        run: terraform init 
      - name: Terraform plan
-       id: plan
-       # if: github.event_name == 'pull_request'
+       id: plan 
        run: |
          terraform plan -var-file="topics.tfvars" --out planfile -input=false
          terraform show -json planfile > plan.json  
@@ -62,4 +64,7 @@ jobs:
           jq '.result[0].result' opa.json
           exit 1
          fi
- 
+     - name: Terraform Apply 
+       id: apply 
+       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+       run: terraform apply -var-file="topics.tfvars" -auto-approve -input=false
