--- a/.github/workflows/terraformplan.yml
+++ b/.github/workflows/terraformplan.yml
@@ -42,9 +42,7 @@ jobs:
        id: plan 
        run: |
          terraform plan -var-file="topics.tfvars" --out planfile -input=false
-         terraform show -json planfile > plan.json  
-         pwd
-         ls
+         terraform show -json planfile > plan.json   
        continue-on-error: false
      - name: Terraform Plan Status
        if: steps.plan.outcome == 'failure'
@@ -56,8 +54,7 @@ jobs:
      - name: Run OPA 
        id: opa
        run: |
-         pwd
-         ls
+         cat topics.tfvars
          opa exec --decision terraform/topics/deny  --bundle policy/ plan.json > opa.json
          cat opa.json
          RESULT=`jq ".result[0].result | length" opa.json`
