--- a/.github/workflows/terraformplan.yml
+++ b/.github/workflows/terraformplan.yml
@@ -6,6 +6,7 @@ name: CI
 on: 
   pull_request:
     # Trigger the worflow on pull request event for main branch
+    types: [opened, edited, reopened]
     branches:
       - main
 
