--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ planfile
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
 *.lock.hcl
+env.sh
