--- a/.github/workflows/terraformplan.yml
+++ b/.github/workflows/terraformplan.yml
@@ -15,6 +15,8 @@ on:
   workflow_dispatch:
 env:
  # verbosity setting for Terraform logs
+ CONFLUENT_CLOUD_API_KEY: ${{ secrets.CCLOUD_API_KEY }}
+ CONFLUENT_CLOUD_API_SECRET: ${{ secrets.CCLOUD_API_SECRET }}
  # TF_LOG: INFO
  TF_VAR_confluent_cloud_api_key: ${{ secrets.CCLOUD_API_KEY }}
  TF_VAR_confluent_cloud_api_secret: ${{ secrets.CCLOUD_API_SECRET }}
