--- a/.github/workflows/terraformplan.yml
+++ b/.github/workflows/terraformplan.yml
@@ -56,11 +56,15 @@ jobs:
        run: terraform plan -var-file="topics.tfvars" --out planfile -input=false && terraform show -json planfile > plan.json   
      - name: Run OPA Tests
        id: opa
-       run: opa eval data.terraform -d opa/policies/ -i plan.json -f pretty > opa.json
+       run: opa eval "data.terraform" -d opa/policies/ -i plan.json -f pretty --fail-defined --format=json > opa.json
      - name: Check Opa Results
        id: check 
        run: |
-          echo "approved=$(jq -e '.deny | length' opa.json)" >> $GITHUB_OUTPUT
+          if jq -e '.result[0].expressions[0].value | length == 0' opa.json; then
+            echo "approved=0" >> $GITHUB_OUTPUT
+          else
+            echo "approved=1" >> $GITHUB_OUTPUT
+          fi 
      - name: Terraform apply
        if: github.ref == 'refs/heads/main' && github.event_name == 'push' && steps.check.outputs.approved == 0
        run: terraform apply -var-file="topics.tfvars" -input=false -auto-approve   
