--- a/.github/workflows/terraformplan.yml
+++ b/.github/workflows/terraformplan.yml
@@ -56,7 +56,7 @@ jobs:
        run: terraform plan -var-file="topics.tfvars" --out planfile -input=false && terraform show -json planfile > plan.json   
      - name: Run OPA Tests
        id: opa
-       run: opa eval "data.terraform" -d opa/policies/ -i plan.json -f pretty --fail-defined --format=json > opa.json
+       run: opa eval 'data.terraform.deny' -d opa/policies/ -i plan.json --fail-defined --format=json > opa.json
      - name: Check Opa Results
        id: check 
        run: |
