--- a/.github/workflows/terraformplan.yml
+++ b/.github/workflows/terraformplan.yml
@@ -54,19 +54,8 @@ jobs:
      - name: Terraform plan
        id: plan 
        run: terraform plan -var-file="topics.tfvars" --out planfile -input=false && terraform show -json planfile > plan.json
-     - name: Debug OPA Inputs
-       run: |
-         echo "==> Current working dir:"
-         pwd
-         echo "==> Listing everything:"
-         find .
-         echo "==> Listing Rego files:"
-         ls -l opa/policies || echo "No policy folder"
-         cat opa/policies/*.rego || echo "No rego files found"
-         echo "==> plan.json exists?"
-         ls -l plan.json
-         echo "==> plan.json structure (first 50 lines):"
-         head -n 50 plan.json || echo "plan.json missing or empty"
+     - name: Validate OPA policies
+       run: opa check opa/policies/
      - name: Run OPA Tests
        id: opa
        run: opa eval 'data' -d opa/policies/ -i plan.json --fail-defined --format=json > opa.json
