--- a/.github/workflows/terraformplan.yml
+++ b/.github/workflows/terraformplan.yml
@@ -58,18 +58,17 @@ jobs:
        run: opa check opa/policies/
      - name: Run OPA Tests
        id: opa
-       run: |
-          cat plan.json 
+       run: | 
           opa eval 'data.terraform.deny' -d opa/policies/ -i plan.json --format pretty > opa.json
           cat opa.json
      - name: Check Opa Results
        id: check 
        run: |
-          if jq -e '.result[0].expressions[0].value | length == 0' opa.json; then
-            echo "approved=0" >> $GITHUB_OUTPUT
-          else
-            echo "approved=1" >> $GITHUB_OUTPUT
-          fi 
+         if jq -e '(.result[0].expressions[0].value | length) == 0 or (.result[0].expressions[0].value | type == "object" and (keys | length) == 0)' opa.json; then
+           echo "approved=0" >> $GITHUB_OUTPUT
+         else
+           echo "approved=1" >> $GITHUB_OUTPUT
+         fi
      - name: Terraform apply
        if: github.ref == 'refs/heads/main' && github.event_name == 'push' && steps.check.outputs.approved == 0
        run: terraform apply -var-file="topics.tfvars" -input=false -auto-approve   
